src/components/drawer/drawer.scss
@import "../../styles/colors.scss";

.drawer {
  position: fixed;
  overflow-y: auto;
  overflow-x: hidden;
  text-align: left;
  transition: transform 300ms;
  z-index: 998;
  background: $color-bg-darker;

  &.left-drawer {
    top: 0;
    left: 100%;
    height: 100%;
  }

  &.bottom-drawer {
    left: 0;
    top: 100%;
    width: 100%;
  }
}

.drawer-overlay {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  width: 100%;
  overflow: hidden;
  height: 100%;
  background-color: #000;
  opacity: 0;
}

